--- a/styles/style.css
+++ b/styles/style.css
@@ -23,6 +23,7 @@ header {
     background-color: #52bad5;
     border-bottom: 1px solid #2c9ab7;
     margin: auto;
+	justify-content: space-between;
 }
 .logo {
 	color: #fff;
@@ -34,49 +35,21 @@ header {
 	margin-left: 25px;
 	letter-spacing: 4px;
 }
-nav {
-	float: right;
-	width: 50%;
-	text-align: right;
-	margin-right: 25px;
-}
-header nav ul {
-	list-style: none;
-	float: right;
-}
-nav ul li {
-	float: left;
-	color: #FFFFFF;
-	font-size: 14px;
-	text-align: left;
-	margin-right: 25px;
-	letter-spacing: 2px;
-	font-weight: bold;
-	transition: all 0.3s linear;
-}
-ul li a {
-	color: #FFFFFF;
-	text-decoration: none;
-}
-ul li:hover a {
-	color: #2C9AB7;
-}
+
 .hero_header {
-	color: #FFFFFF;
-	text-align: center;
-	margin-top: 0px;
-	margin-right: 0px;
-	margin-bottom: 0px;
-	margin-left: 0px;
-	letter-spacing: 4px;
+    color: #FFFFFF;
+    margin: 5%;
+    letter-spacing: 0.25em;
+    display: inline-block;
 }
 /* Hero Section */
 .hero {
-	padding-top: 150px;
-	padding-bottom: 150px;
-	background-image: url(img/peoplehousemain@1x.png);
-	opacity: 2;
-	width: 100%;
+    padding: 5% 0% 0% 0%;
+    /* padding-bottom: 150px; */
+    /* background-image: url(img/peoplehousemain@1x.png); */
+    opacity: 2;
+    width: 100%;
+    background-color: 52bad5;
 }
 
 .light {
@@ -84,12 +57,15 @@ ul li:hover a {
 	color: #717070;
 }
 .tagline {
-	text-align: center;
-	color: #FFFFFF;
-	margin-top: 4px;
-	font-weight: lighter;
-	text-transform: uppercase;
-	letter-spacing: 1px;
+    text-align: center;
+    color: #41464b;
+    /* margin: 0% 0; */
+    font-weight: bolder;
+    /* text-transform: uppercase; */
+    letter-spacing: .15em;
+    padding: 5% 2% 0 2%;
+    color: #f9fafb;
+    font-size: 2em;
 }
 /* About Section */
 .text_column {
@@ -157,12 +133,12 @@ ul li:hover a {
 	background-repeat: no-repeat;
 }
 .parallax {
-	color: #FFFFFF;
-	text-align: right;
-	padding-right: 100px;
-	padding-top: 110px;
-	letter-spacing: 2px;
-	margin-top: 0px;
+    color: #FFFFFF;
+    text-align: right;
+    padding-right: 100px;
+    /* padding-top: 76px; */
+    letter-spacing: 2px;
+    /* margin-top: 0px; */
 }
 .parallax_description {
 	color: #FFFFFF;
